--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ body {
     font-size: 17px;
     font-weight: 400;
     text-align: center;
-    margin: -11px 0 var(--spacing-lg) 0;
+    margin: -11px 0 0 0;
     color: var(--text-secondary);
     line-height: 1.4;
     font-style: italic;
